<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">养爱车</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_image">welcome image</string>
    
    <string name="progress_msg">正在加载数据...</string>
	<string name="netfail_msg">服务器忙,稍后再试...</string>
	<string name="verify_code_null">验证码不能为空</string>
	<string name="car_miles"><xliff:g id="miles">%d</xliff:g>公里</string>
	<string name="place_order_tishi">为方便联系您，请填写以下信息</string>
	<string name="price_text">￥<xliff:g id="price">%f</xliff:g></string>	
	<string name="coupon_number_text">号码：<xliff:g id="price">%s</xliff:g></string>	
	<string name="complete_car_details">完善你的爱车信息</string>
	<string name="product_num">X<xliff:g id="nums">%d</xliff:g></string>
	<string name="rating_str"><xliff:g id="nums">%d</xliff:g>星</string>
	<string name="numofpics"><xliff:g id="nums1">%d</xliff:g>/<xliff:g id="nums2">%d</xliff:g></string>
	
	<string name="cancel">取消</string>
	<string name="save_pic_sd">保存到手机</string>
	<string name="carpart_update_t1">手动更新数据便于养爱车为您提供更精准的数据信息</string>
	<string name="carpart_update_t2">请选择其中任意一项填写</string>
	<string name="carpart_update_t3">上次维修/更换时里程数</string>
	<string name="carpart_update_t4">上次维修/更换时间</string>
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="unqualified_str">不合格<xliff:g id="nums1">%d</xliff:g>项</string>
    <string name="qualified_str">合格<xliff:g id="nums2">%d</xliff:g>项</string>
    <string name="report_name"><xliff:g id="index">%d</xliff:g>、<xliff:g id="name">%s</xliff:g></string>
    
    <string name="emptyview_str">管家暂时还没有添加建议，请稍微等待管家建议。\n\n或者可以打电话直接联系我们养爱车客服，谢谢!</string>
    <string name="beijing_str">北京市</string>
    
    <string name="tv_home_str">车档案</string>
    <string name="tv_selectservice_str">选服务</string>
    <string name="tv_mine_str">我的</string>
    <string name="only_support_bj">目前只支持北京地区服务，敬请谅解！</string>
    <string name="new_data_str">欢迎使用养爱车</string>
    <string name="name_not_null">请填写您的姓名</string>
</resources>