<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/head_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/activity_bg_style"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        layout="@layout/action_bar" />

    <View
        android:id="@+id/split_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_15dim" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carpart_update_t1"
            android:textColor="@color/black_text2"
            android:textSize="@dimen/text_small14" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carpart_update_t2"
            android:layout_marginTop="@dimen/margin_15dim"
            android:layout_marginBottom="@dimen/margin_15dim"
            android:textColor="@color/black_text1"
            android:textSize="@dimen/text_big23" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carpart_update_t3"
            android:textColor="@color/black_text2"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/miles_et"
            style="@style/myEditText_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:ems="10"
            android:hint="里程数"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carpart_update_t4"
            android:textColor="@color/black_text2"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/datetime_et"
            style="@style/myEditText_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center_vertical"
            android:hint="更换时间"
            android:ems="10" >
        </TextView>

        <Button
            android:id="@+id/save_update_btn"
            style="@style/myButtom_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="保存"/>
    </LinearLayout>

</LinearLayout>