<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_bg_style"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llMenu"
        android:layout_alignParentTop="true" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="invisible" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_5dim" >

            <LinearLayout
                android:id="@+id/ll_nav_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_nav_home"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:src="@drawable/selector_nav_home" />

                <TextView
                    android:id="@+id/tv_nav_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_home_str"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_plus_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_plus_add"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:src="@drawable/selector_add_bg" />

                <TextView
                    android:id="@+id/tv_select_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_selectservice_str"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_nav_my"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/image_nav_my"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:src="@drawable/selector_nav_my" />

                <TextView
                    android:id="@+id/tv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mine_str"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>